# ElementsProgrammingInterviews

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
epibook-solutions/solutions/: index.html
epibook-solutions/solutions/cpp/: 2-for-all.cc  3-sum-closest.cc  3-sum.cc  Add_operators_in_string.cc  Anagrams.cc  Anonymous_letter.cc  BST_lowest_common_ancestor.cc  BST_sorted_order.cc  Balanced_binary_tree.cc  Binary_search_Ai=i.cc  Binary_search_circular_array_with_duplicates.cc  Binary_tree_level_order.cc  Binary_tree_prototype.h  Binary_tree_utils.h  Build_BST_from_sorted_array.cc  Can_string_be_palindrome_hash.h  Can_string_be_palindrome_sorting.h  Checking_cycle.h  Checking_cycle_alternative.cc  Closest_int_same_bits.cc  Closest_pair_points.cc  Closest_stars.cc  Collatz_conjecture.cc  Completion_search_space_efficient.cc  Computing_x^n.cc  Connect_leaves_binary_tree.cc  Copying_postings_list.cc  Count_occurrences_in_sentence.cc  Descendant_and_ancestor.cc  Division.cc  DivisionFloat.cc  Division_no_operator.cc  Doors.cc  Doubly_linked_list_prototype.h  Drawing_skylines.cc  Eliminate_duplicate.cc  Equiv_classes.cc  Find_missing_and_duplicate_XOR.cc  GCD.cc  Gaussian_primes.cc  (+140 more)
epibook-solutions/solutions/java/concurrency/: AsyncThread.java  Collatz.java  S1.java  SimpleWebServer.java  TwoThreadIncrement.java
epibook-solutions/solutions/java/src/main/com/epi/: AddOperatorsInString.java  AddTwoNumberList.java  AddingCredits.java  BalancedBinaryTree.java  BentleyBsearch.java  BigNumberMultiplication.java  BinarySearchAiEqI.java  BinarySearchFirstK.java  BinarySearchTreePrototypeTemplate.java  BinarySearchUnknownLength.java  BinaryTreePreorderTraversalIterative.java  BinaryTreeUtils.java  BinaryTreeWithParentPrototype.java  CanStringBePalindromeSorting.java  CircularQueue.java  ClosestIntSameBits.java  ClosestToMedian.java  CompareKthLargestInHeap.java  ComputingXPowN.java  ConnectLeavesBinaryTree.java  CyclicRightShift.java  Doors.java  DutchNationalFlag.java  ExteriorBinaryTree.java  FirstMissingPositive.java  GCD.java  GenerateParentheses.java  HeightDetermination.java  InsertionSortList.java  KThNodeBinaryTree.java  LineMostPoints.java  LongestSubarrayK.java  LongestSubarrayWithDistinctEntries.java  LongestValidParentheses.java  LowestCommonAncestorNoParent.java  MatrixRotation.java  MaxSubmatrixRectangleImproved.java  MergeSortedLists.java  MinimumDistance3SortedArrays.java  MinimumWaitingTime.java  (+43 more)
epibook-solutions/solutions/java/src/main/resources/configurations/: EpiCheckstyleConfig.xml  EpiEclipseProfile.xml
epibook-solutions/solutions/java/src/test/com/epi/: TestAll.java
epibook-solutions/solutions/python/: anonymous_letter.py  binary_search_first_k.py  binary_tree_prototype.py  convert_base.py  interconverting_string_integer.py  intersect_sorted_arrays.py  is_binary_tree_a_bst_bfs.py  linked_list_prototype.py  painting_iterative.py  painting_recursive.py  parity1.py  parity2.py  power_set_alternative.py  stack_with_max.py  stack_with_max_improved.py
epibook-solutions/solutions/solutions-alpha-sort/: index.html
epibook.github.io/solutions/cpp/: 0-1_knapsack.cc  0-sum_subset.cc  2-difference.cc  2-exists.cc  4-sum.cc  AddingCredits.cc  Approximate_sort.cc  Arbitrage.cc  BST_parent_prototype.h  BST_prototype.h  BST_prototype_shared_ptr.h  BST_to_sorted_doubly_list.cc  Bentleybsearch.cc  Biggest_product_n-1.cc  Biggest_product_n-1_math.cc  Bignumber_multiplication.cc  Binary_search_circular_array.cc  Binary_search_first_k.cc  Binary_search_larger_k.cc  Binary_search_unknown_length.cc  Binary_tree_lock.cc  Binary_tree_to_doubly_linked_list.cc  Binary_tree_with_parent_prototype.h  Can_string_be_palindrome.cc  Celebrity_finding.cc  Checking_cycle.cc  Circular_queue.cc  Close_search.cc  Closest_palindrome.cc  Closest_to_median.cc  Compare_k-th_largest_in_heap.cc  Completion_search.cc  Computing_binomial_coefficients.cc  Conversion_sorted_array.cc  Convert_base.cc  Count_inversions.cc  Deletion_list.cc  Dutch_national_flag.cc  Elias_coding.cc  Even_odd_merge_linked_list.cc  (+176 more)
epibook.github.io/solutions/java/: pom.xml
epibook.github.io/solutions/java/concurrency/: OddEven.java  RW.java  S2.java  TaskExecutionWebServer.java  ThreadPerTaskWebserver.java
epibook.github.io/solutions/java/src/main/com/epi/: AnonymousLetter.java  ApproximateSort.java  Arbitrage.java  AverageTop3Scores.java  BSTLowestCommonAncestor.java  (+71 more)
epibook.github.io/solutions/python/: 3-sum.py  balanced_binary_tree.py  binary_tree_level_order.py  checking_cycle.py  checking_cycle_alternative.py  intersect_sorted_arrays1.py  intersect_sorted_arrays2.py  intersect_sorted_arrays3.py  is_binary_tree_a_bst.py  is_binary_tree_a_bst_const_space.py  merge_sorted_arrays.py  number_ways.py  number_ways_obstacles.py  parity.py  parity3.py  parity4.py  power_set.py  rendering_calendar.py  reverse_words.py  robot_battery.py  two_thread_increment.py
md_notes/: notes.md
my_solutions/: TODO.txt  Test Results - MyTests - parallel.html  Test Results - MyTests.html  pom.xml
my_solutions/src/main/java/epi/solutions/: BiggestNMinus1Product.java  CanStringBePalindrome.java  CheckingListCyclicity.java  ClosestIntSameBits.java  DutchFlagPartition.java  InterconvertingStringInteger.java  IsPalindrome.java  JumpBoardGame.java  LookAndSay.java  MaxDifferenceKPairs.java  MergeSortedLists.java  MiscHelperMethods.java  MultiplyShiftAdd.java  Parity.java  PermuteArray.java  PlusOne.java  PowerXY.java  PrimeSieve.java  RabinKarp.java  RemoveDuplicatesFromSortedArrayList.java  RemoveElement.java  ReplaceAndRemove.java  ReverseLinkedList.java  ReverseSublist.java  ReverseWords.java  SampleOffline.java  SwapBits.java  Tail.java  UnifRandomNumberGenerator.java  isPalindrome.java
my_solutions/src/test/java/epi/solutions/: MyConcurrentTests.java  MyTests.java  PhoneMnemonic.java
my_solutions_cpp/: 0-1_knapsack.cpp  CMakeLists.txt
my_solutions_cpp/book_solutions/: CMakeLists.txt
my_solutions_cpp/my_solutions/: 5-1-Parity.cpp  5-1-Parity.h
solutions/ch5.PrimitiveTypes/: Parity.java  parity.java
(+219 files in other folders)
