cmake_minimum_required(VERSION 3.5)
project(ElementsProgrammingInterviews)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    epibook.github.io/solutions/cpp/0-1_knapsack.cc
    epibook.github.io/solutions/cpp/0-sum_subset.cc
    epibook.github.io/solutions/cpp/2-difference.cc
    epibook.github.io/solutions/cpp/2-exists.cc
    epibook.github.io/solutions/cpp/2-for-all.cc
    epibook.github.io/solutions/cpp/3-sum-closest.cc
    epibook.github.io/solutions/cpp/3-sum.cc
    epibook.github.io/solutions/cpp/4-sum.cc
    epibook.github.io/solutions/cpp/add-binary.cc
    epibook.github.io/solutions/cpp/add-two-number-list.cc
    epibook.github.io/solutions/cpp/Add_operators_in_string.cc
    epibook.github.io/solutions/cpp/AddingCredits.cc
    epibook.github.io/solutions/cpp/Anagrams.cc
    epibook.github.io/solutions/cpp/Anonymous_letter.cc
    epibook.github.io/solutions/cpp/Approximate_sort.cc
    epibook.github.io/solutions/cpp/Arbitrage.cc
    epibook.github.io/solutions/cpp/average-top-3-scores.cc
    epibook.github.io/solutions/cpp/Balanced_binary_tree.cc
    epibook.github.io/solutions/cpp/Bentleybsearch.cc
    epibook.github.io/solutions/cpp/Biggest_product_n-1.cc
    epibook.github.io/solutions/cpp/Biggest_product_n-1_math.cc
    epibook.github.io/solutions/cpp/Bignumber_multiplication.cc
    epibook.github.io/solutions/cpp/binary-tree-level-order-bottom-up.cc
    epibook.github.io/solutions/cpp/binary-tree-postorder-traversal-iterative-alternative.cc
    epibook.github.io/solutions/cpp/binary-tree-postorder-traversal-iterative.cc
    epibook.github.io/solutions/cpp/binary-tree-preorder-traversal-iterative.cc
    epibook.github.io/solutions/cpp/binary-tree-zigzag-level-order-traversal.cc
    epibook.github.io/solutions/cpp/Binary_search_Ai=i.cc
    epibook.github.io/solutions/cpp/Binary_search_circular_array.cc
    epibook.github.io/solutions/cpp/Binary_search_circular_array_with_duplicates.cc
    epibook.github.io/solutions/cpp/Binary_search_first_k.cc
    epibook.github.io/solutions/cpp/Binary_search_larger_k.cc
    epibook.github.io/solutions/cpp/Binary_search_unknown_length.cc
    epibook.github.io/solutions/cpp/Binary_tree_level_order.cc
    epibook.github.io/solutions/cpp/Binary_tree_lock.cc
    epibook.github.io/solutions/cpp/Binary_tree_prototype.h
    epibook.github.io/solutions/cpp/Binary_tree_to_doubly_linked_list.cc
    epibook.github.io/solutions/cpp/Binary_tree_utils.h
    epibook.github.io/solutions/cpp/Binary_tree_with_parent_prototype.h
    epibook.github.io/solutions/cpp/bonus-improved.cc
    epibook.github.io/solutions/cpp/bonus.cc
    epibook.github.io/solutions/cpp/BST_lowest_common_ancestor.cc
    epibook.github.io/solutions/cpp/BST_parent_prototype.h
    epibook.github.io/solutions/cpp/BST_prototype.h
    epibook.github.io/solutions/cpp/BST_prototype_shared_ptr.h
    epibook.github.io/solutions/cpp/BST_sorted_order.cc
    epibook.github.io/solutions/cpp/BST_to_sorted_doubly_list.cc
    epibook.github.io/solutions/cpp/Build_BST_from_sorted_array.cc
    epibook.github.io/solutions/cpp/buy-and-sell-stock-twice.cc
    epibook.github.io/solutions/cpp/buy-and-sell-stock.cc
    epibook.github.io/solutions/cpp/Can_string_be_palindrome.cc
    epibook.github.io/solutions/cpp/Can_string_be_palindrome_hash.h
    epibook.github.io/solutions/cpp/Can_string_be_palindrome_sorting.h
    epibook.github.io/solutions/cpp/Celebrity_finding.cc
    epibook.github.io/solutions/cpp/Checking_cycle.cc
    epibook.github.io/solutions/cpp/Checking_cycle.h
    epibook.github.io/solutions/cpp/Checking_cycle_alternative.cc
    epibook.github.io/solutions/cpp/Circular_queue.cc
    epibook.github.io/solutions/cpp/climb-stairs.cc
    epibook.github.io/solutions/cpp/clone-graph.cc
    epibook.github.io/solutions/cpp/Close_search.cc
    epibook.github.io/solutions/cpp/closest-int-same-bits-alternative.cc
    epibook.github.io/solutions/cpp/Closest_int_same_bits.cc
    epibook.github.io/solutions/cpp/Closest_pair_points.cc
    epibook.github.io/solutions/cpp/Closest_palindrome.cc
    epibook.github.io/solutions/cpp/Closest_stars.cc
    epibook.github.io/solutions/cpp/Closest_to_median.cc
    epibook.github.io/solutions/cpp/Collatz_conjecture.cc
    epibook.github.io/solutions/cpp/combinations-unique.cc
    epibook.github.io/solutions/cpp/combinations.cc
    epibook.github.io/solutions/cpp/Compare_k-th_largest_in_heap.cc
    epibook.github.io/solutions/cpp/Completion_search.cc
    epibook.github.io/solutions/cpp/Completion_search_space_efficient.cc
    epibook.github.io/solutions/cpp/compute_random_permutation.cc
    epibook.github.io/solutions/cpp/Computing_binomial_coefficients.cc
    epibook.github.io/solutions/cpp/Computing_x^n.cc
    epibook.github.io/solutions/cpp/Connect_leaves_binary_tree.cc
    epibook.github.io/solutions/cpp/container-with-most-water.cc
    epibook.github.io/solutions/cpp/Conversion_sorted_array.cc
    epibook.github.io/solutions/cpp/Convert_base.cc
    epibook.github.io/solutions/cpp/Copying_postings_list.cc
    epibook.github.io/solutions/cpp/Count_inversions.cc
    epibook.github.io/solutions/cpp/Count_occurrences_in_sentence.cc
    epibook.github.io/solutions/cpp/cyclic-right-shift.cc
    epibook.github.io/solutions/cpp/Deletion_list.cc
    epibook.github.io/solutions/cpp/Descendant_and_ancestor.cc
    epibook.github.io/solutions/cpp/distinct-sorted-list.cc
    epibook.github.io/solutions/cpp/Division.cc
    epibook.github.io/solutions/cpp/Division_no_operator.cc
    epibook.github.io/solutions/cpp/DivisionFloat.cc
    epibook.github.io/solutions/cpp/Doors.cc
    epibook.github.io/solutions/cpp/Doubly_linked_list_prototype.h
    epibook.github.io/solutions/cpp/Drawing_skylines.cc
    epibook.github.io/solutions/cpp/Dutch_national_flag.cc
    epibook.github.io/solutions/cpp/dutch_national_flag_slow_inplace.cc
    epibook.github.io/solutions/cpp/dutch_national_flag_two_passes.cc
    epibook.github.io/solutions/cpp/Elias_coding.cc
    epibook.github.io/solutions/cpp/Eliminate_duplicate.cc
    epibook.github.io/solutions/cpp/Equiv_classes.cc
    epibook.github.io/solutions/cpp/Even_odd_merge_linked_list.cc
    epibook.github.io/solutions/cpp/execute-shell.h
    epibook.github.io/solutions/cpp/Exterior_binary_tree.cc
    epibook.github.io/solutions/cpp/Find_element_appears_once.cc
    epibook.github.io/solutions/cpp/Find_k_largest_BST.cc
    epibook.github.io/solutions/cpp/Find_kth_element_in_two_sorted_arrays.cc
    epibook.github.io/solutions/cpp/Find_longest_arithmetic_progression.cc
    epibook.github.io/solutions/cpp/Find_missing_and_duplicate.cc
    epibook.github.io/solutions/cpp/Find_missing_and_duplicate_XOR.cc
    epibook.github.io/solutions/cpp/Finding_min_max.cc
    epibook.github.io/solutions/cpp/first-missing-positive.cc
    epibook.github.io/solutions/cpp/Gassing_up.cc
    epibook.github.io/solutions/cpp/Gaussian_elimination.cc
    epibook.github.io/solutions/cpp/Gaussian_primes.cc
    epibook.github.io/solutions/cpp/GCD.cc
    epibook.github.io/solutions/cpp/generate-parentheses.cc
    epibook.github.io/solutions/cpp/Generate_spiral_matrix.cc
    epibook.github.io/solutions/cpp/generating-a-b-sqrt2-improved.cc
    epibook.github.io/solutions/cpp/Generating_a_b_sqrt2.cc
    epibook.github.io/solutions/cpp/gray-code-backtrack.cc
    epibook.github.io/solutions/cpp/gray-code.cc
    epibook.github.io/solutions/cpp/Hash_dictionary.cc
    epibook.github.io/solutions/cpp/Height_determination.cc
    epibook.github.io/solutions/cpp/highest-affinity-pairs.cc
    epibook.github.io/solutions/cpp/House_majority.cc
    epibook.github.io/solutions/cpp/Huffman_encoding.cc
    epibook.github.io/solutions/cpp/Image_compression.cc
    epibook.github.io/solutions/cpp/indirect_sort.cc
    epibook.github.io/solutions/cpp/Inorder_traversal_with_parent.cc
    epibook.github.io/solutions/cpp/insert-interval.cc
    epibook.github.io/solutions/cpp/insertion-deletion-BST.cc
    epibook.github.io/solutions/cpp/insertion-sort-list.cc
    epibook.github.io/solutions/cpp/integer-to-roman.cc
    epibook.github.io/solutions/cpp/Interconverting_string_integer.cc
    epibook.github.io/solutions/cpp/interleaving-string.cc
    epibook.github.io/solutions/cpp/Intersect_rectangle.cc
    epibook.github.io/solutions/cpp/Intersect_sorted_arrays.cc
    epibook.github.io/solutions/cpp/Intersect_sorted_arrays1.h
    epibook.github.io/solutions/cpp/Intersect_sorted_arrays2.h
    epibook.github.io/solutions/cpp/Intersect_sorted_arrays3.h
    epibook.github.io/solutions/cpp/is_binary_tree_a_BST.cc
    epibook.github.io/solutions/cpp/is_binary_tree_a_BST_BFS.cc
    epibook.github.io/solutions/cpp/is_binary_tree_a_BST_const_space.cc
    epibook.github.io/solutions/cpp/job_assignment.cc
    epibook.github.io/solutions/cpp/jump-game-min-steps.cc
    epibook.github.io/solutions/cpp/jump-game.cc
    epibook.github.io/solutions/cpp/justify-text.cc
    epibook.github.io/solutions/cpp/k-balanced_binary_tree.cc
    epibook.github.io/solutions/cpp/k-largest-elements-binary-heap.cc
    epibook.github.io/solutions/cpp/k-th_element_streaming.cc
    epibook.github.io/solutions/cpp/k-th_largest_element_large_n.cc
    epibook.github.io/solutions/cpp/k-th_node_binary_tree.cc
    epibook.github.io/solutions/cpp/k-th_permutation.cc
    epibook.github.io/solutions/cpp/largearray.c
    epibook.github.io/solutions/cpp/Largest_rectangle_under_skyline.cc
    epibook.github.io/solutions/cpp/Largest_rectangle_under_skyline.h
    epibook.github.io/solutions/cpp/lazy-init.cc
    epibook.github.io/solutions/cpp/Lead_changes.cc
    epibook.github.io/solutions/cpp/length-of-last-word.cc
    epibook.github.io/solutions/cpp/Levenshtein_distance.cc
    epibook.github.io/solutions/cpp/Line_most_points.cc
    epibook.github.io/solutions/cpp/Linked_list_prototype.h
    epibook.github.io/solutions/cpp/list-pivoting.cc
    epibook.github.io/solutions/cpp/Load_balancing.cc
    epibook.github.io/solutions/cpp/longest-contained-range.cc
    epibook.github.io/solutions/cpp/longest-subarray-with-distinct-entries.cc
    epibook.github.io/solutions/cpp/longest-substring-without-repeating-characters.cc
    epibook.github.io/solutions/cpp/longest-valid-parentheses.cc
    epibook.github.io/solutions/cpp/Longest_increasing_subarray.cc
    epibook.github.io/solutions/cpp/Longest_nondecreasing_subsequence.cc
    epibook.github.io/solutions/cpp/Longest_nondecreasing_subsequence_n2.h
    epibook.github.io/solutions/cpp/Longest_nondecreasing_subsequence_nlogn.h
    epibook.github.io/solutions/cpp/Longest_subarray_k.cc
    epibook.github.io/solutions/cpp/Longest_subarray_k_improved.cc
    epibook.github.io/solutions/cpp/look-and-say.cc
    epibook.github.io/solutions/cpp/Lowest_common_ancestor.cc
    epibook.github.io/solutions/cpp/Lowest_common_ancestor_hash.cc
    epibook.github.io/solutions/cpp/Lowest_common_ancestor_no_parent.cc
    epibook.github.io/solutions/cpp/LRUCache.cc
    epibook.github.io/solutions/cpp/matrix-rotation-flip.cc
    epibook.github.io/solutions/cpp/Matrix_rotation.cc
    epibook.github.io/solutions/cpp/Matrix_rotation_constant.cc
    epibook.github.io/solutions/cpp/Matrix_rotation_naive.cc
    epibook.github.io/solutions/cpp/Matrix_search.cc
    epibook.github.io/solutions/cpp/Max-sum_subarray.cc
    epibook.github.io/solutions/cpp/Max_concatenation_numbers.cc
    epibook.github.io/solutions/cpp/Max_difference_k_pairs.cc
    epibook.github.io/solutions/cpp/Max_difference_unlimited_pairs.cc
    epibook.github.io/solutions/cpp/Max_submatrix_rectangle.cc
    epibook.github.io/solutions/cpp/Max_submatrix_rectangle_brute_force.h
    epibook.github.io/solutions/cpp/Max_submatrix_rectangle_improved.cc
    epibook.github.io/solutions/cpp/Max_submatrix_square.cc
    epibook.github.io/solutions/cpp/Maximum_container.cc
    epibook.github.io/solutions/cpp/Maximum_minimum_difference_k.cc
    epibook.github.io/solutions/cpp/Maximum_sliding_window.cc
    epibook.github.io/solutions/cpp/Maximum_sliding_window_template.cc
    epibook.github.io/solutions/cpp/Maximum_subarray_in_circular_array.cc
    epibook.github.io/solutions/cpp/Maximum_subarray_in_circular_array_constant_space.cc
    epibook.github.io/solutions/cpp/Median_sorted_circular_linked_list.cc
    epibook.github.io/solutions/cpp/merge-two-sorted-arrays-in-place.cc
    epibook.github.io/solutions/cpp/Merge_sorted_arrays.cc
    epibook.github.io/solutions/cpp/Merge_sorted_arrays.h
    epibook.github.io/solutions/cpp/Merge_sorted_lists.cc
    epibook.github.io/solutions/cpp/Merge_sorted_lists.h
    epibook.github.io/solutions/cpp/Merge_two_BSTs.cc
    epibook.github.io/solutions/cpp/Minimum_distance_3_sorted_arrays.cc
    epibook.github.io/solutions/cpp/Minimum_subarray_difference.cc
    epibook.github.io/solutions/cpp/Minimum_waiting_time.cc
    epibook.github.io/solutions/cpp/Missing_element.cc
    epibook.github.io/solutions/cpp/Multibet_card_color_game.cc
    epibook.github.io/solutions/cpp/MultiplyShiftAdd.cc
    epibook.github.io/solutions/cpp/n-queens-count.cc
    epibook.github.io/solutions/cpp/n-queens.cc
    epibook.github.io/solutions/cpp/Nearest_repetition.cc
    epibook.github.io/solutions/cpp/Nearest_restaurant.cc
    epibook.github.io/solutions/cpp/Next_permutation.cc
    epibook.github.io/solutions/cpp/nonconstructible-change.cc
    epibook.github.io/solutions/cpp/nonuniform_random_number_generation.cc
    epibook.github.io/solutions/cpp/normalized_pathnames.cc
    epibook.github.io/solutions/cpp/number-steps.cc
    epibook.github.io/solutions/cpp/Number_ways.cc
    epibook.github.io/solutions/cpp/Number_ways_obstacles.cc
    epibook.github.io/solutions/cpp/Offline_minimum.cc
    epibook.github.io/solutions/cpp/Offline_sampling.cc
    epibook.github.io/solutions/cpp/Offline_sampling.h
    epibook.github.io/solutions/cpp/Online_median.cc
    epibook.github.io/solutions/cpp/Online_sampling.cc
    epibook.github.io/solutions/cpp/Overlapping_days.cc
    epibook.github.io/solutions/cpp/Overlapping_lists.cc
    epibook.github.io/solutions/cpp/Overlapping_lists_no_cycle.cc
    epibook.github.io/solutions/cpp/Overlapping_lists_no_cycle.h
    epibook.github.io/solutions/cpp/Painting_iterative.cc
    epibook.github.io/solutions/cpp/Painting_recursive.cc
    epibook.github.io/solutions/cpp/palindrome-number.cc
    epibook.github.io/solutions/cpp/palindrome-partitioning-min-cuts.cc
    epibook.github.io/solutions/cpp/palindrome-partitioning.cc
    epibook.github.io/solutions/cpp/Palindrome_linked_list.cc
    epibook.github.io/solutions/cpp/Parity.cc
    epibook.github.io/solutions/cpp/Parity1.h
    epibook.github.io/solutions/cpp/Parity2.h
    epibook.github.io/solutions/cpp/Parity3.h
    epibook.github.io/solutions/cpp/Parity4.h
    epibook.github.io/solutions/cpp/partition-array.cc
    epibook.github.io/solutions/cpp/Partition_2_same_average.cc
    epibook.github.io/solutions/cpp/pascal-triangle-1.cc
    epibook.github.io/solutions/cpp/pascal-triangle-2.cc
    epibook.github.io/solutions/cpp/path-sum-binary-tree-all.cc
    epibook.github.io/solutions/cpp/path-sum-binary-tree.cc
    epibook.github.io/solutions/cpp/Permutation_array.cc
    epibook.github.io/solutions/cpp/Permutation_array1.h
    epibook.github.io/solutions/cpp/Permutation_array2.h
    epibook.github.io/solutions/cpp/permutations-alternative.cc
    epibook.github.io/solutions/cpp/permutations-unique.cc
    epibook.github.io/solutions/cpp/permutations.cc
    epibook.github.io/solutions/cpp/Phone_mnemonic.cc
    epibook.github.io/solutions/cpp/Picking_up_coins.cc
    epibook.github.io/solutions/cpp/Picking_up_coins_dont_lose.cc
    epibook.github.io/solutions/cpp/Planning_fishing.cc
    epibook.github.io/solutions/cpp/plus-one.cc
    epibook.github.io/solutions/cpp/Points_covering_intervals.cc
    epibook.github.io/solutions/cpp/Points_covering_intervals_alternative.cc
    epibook.github.io/solutions/cpp/populating-next-right-pointers-any-binary-tree.cc
    epibook.github.io/solutions/cpp/populating-next-right-pointers.cc
    epibook.github.io/solutions/cpp/Postings_list_prototype.h
    epibook.github.io/solutions/cpp/power-x-y.cc
    epibook.github.io/solutions/cpp/Power_set.cc
    epibook.github.io/solutions/cpp/Power_set_alternative.cc
    epibook.github.io/solutions/cpp/prefix-search.cc
    epibook.github.io/solutions/cpp/Pretty_printing.cc
    epibook.github.io/solutions/cpp/prime-sieve-basic.cc
    epibook.github.io/solutions/cpp/Prime_sieve.cc
    epibook.github.io/solutions/cpp/Queue_from_stacks.cc
    epibook.github.io/solutions/cpp/Queue_using_two_integers.cc
    epibook.github.io/solutions/cpp/Queue_with_max.cc
    epibook.github.io/solutions/cpp/rabin-karp.cc
    epibook.github.io/solutions/cpp/range-lookup-BST.cc
    epibook.github.io/solutions/cpp/Rays_covering_arcs.cc
    epibook.github.io/solutions/cpp/Rearrange.cc
    epibook.github.io/solutions/cpp/Rebuild_BST_preorder.cc
    epibook.github.io/solutions/cpp/Rebuild_BST_preorder_better.cc
    epibook.github.io/solutions/cpp/reconstruct-almost-bst.cc
    epibook.github.io/solutions/cpp/Reconstruct_binary_tree_post_in_orders.cc
    epibook.github.io/solutions/cpp/Reconstruct_binary_tree_pre_in_orders.cc
    epibook.github.io/solutions/cpp/Reconstruct_preorder_with_null.cc
    epibook.github.io/solutions/cpp/recover-binary-search-tree-constant-space.cc
    epibook.github.io/solutions/cpp/Regular_expression.cc
    epibook.github.io/solutions/cpp/remove-duplicates-from-sorted-array.cc
    epibook.github.io/solutions/cpp/remove-duplicates-sorted-list.cc
    epibook.github.io/solutions/cpp/remove-element.cc
    epibook.github.io/solutions/cpp/remove-twice-duplicates-from-sorted-array.cc
    epibook.github.io/solutions/cpp/Remove_kth_last_list.cc
    epibook.github.io/solutions/cpp/Rendering_calendar.cc
    epibook.github.io/solutions/cpp/Replace_and_remove.cc
    epibook.github.io/solutions/cpp/Reservoir_sampling.cc
    epibook.github.io/solutions/cpp/reverse-integer.cc
    epibook.github.io/solutions/cpp/reverse-list-in-k-group.cc
    epibook.github.io/solutions/cpp/Reverse_bits.cc
    epibook.github.io/solutions/cpp/reverse_linked_list_from_s_to_f.cc
    epibook.github.io/solutions/cpp/Reverse_linked_list_iterative.cc
    epibook.github.io/solutions/cpp/Reverse_linked_list_iterative.h
    epibook.github.io/solutions/cpp/Reverse_linked_list_recursive.cc
    epibook.github.io/solutions/cpp/Reverse_words.cc
    epibook.github.io/solutions/cpp/Road_network.cc
    epibook.github.io/solutions/cpp/roman-to-integer.cc
    epibook.github.io/solutions/cpp/rook-attack.cc
    epibook.github.io/solutions/cpp/Rotate_array.cc
    epibook.github.io/solutions/cpp/Rotate_array.h
    epibook.github.io/solutions/cpp/Rotate_array_permutation.h
    epibook.github.io/solutions/cpp/RPN.cc
    epibook.github.io/solutions/cpp/Run_length_compression.cc
    epibook.github.io/solutions/cpp/Score_combination.cc
    epibook.github.io/solutions/cpp/Score_permutation.cc
    epibook.github.io/solutions/cpp/scramble-string.cc
    epibook.github.io/solutions/cpp/search-a-range-sorted-array.cc
    epibook.github.io/solutions/cpp/search-insert-position-sorted-array.cc
    epibook.github.io/solutions/cpp/search-rotated-sorted-array-with-duplicates.cc
    epibook.github.io/solutions/cpp/search-rotated-sorted-array.cc
    epibook.github.io/solutions/cpp/Search_a_pair_sorted_array.cc
    epibook.github.io/solutions/cpp/Search_BST_first_larger_k.cc
    epibook.github.io/solutions/cpp/Search_BST_for_first_occurrence_iterative.cc
    epibook.github.io/solutions/cpp/Search_BST_for_first_occurrence_recursive.cc
    epibook.github.io/solutions/cpp/Search_frequent_items.cc
    epibook.github.io/solutions/cpp/Search_majority.cc
    epibook.github.io/solutions/cpp/Search_maze.cc
    epibook.github.io/solutions/cpp/Search_min_first_BST.cc
    epibook.github.io/solutions/cpp/Search_postings_list_iterative.cc
    epibook.github.io/solutions/cpp/Search_postings_list_recursive.cc
    epibook.github.io/solutions/cpp/Shortest_path_fewest_edges.cc
    epibook.github.io/solutions/cpp/Shortest_unique_prefix.cc
    epibook.github.io/solutions/cpp/Sliding_window.cc
    epibook.github.io/solutions/cpp/Smallest_subarray_covering_set.cc
    epibook.github.io/solutions/cpp/Smallest_subarray_covering_set.h
    epibook.github.io/solutions/cpp/Smallest_subarray_covering_set_stream.h
    epibook.github.io/solutions/cpp/snake-string.cc
    epibook.github.io/solutions/cpp/sort-list.cc
    epibook.github.io/solutions/cpp/sort_k-increasing-decreasing_array.cc
    epibook.github.io/solutions/cpp/Sorted_list_to_BST.cc
    epibook.github.io/solutions/cpp/Spiral_matrix.cc
    epibook.github.io/solutions/cpp/Spiral_matrix_clockwise.cc
    epibook.github.io/solutions/cpp/Spreadsheet_encoding.cc
    epibook.github.io/solutions/cpp/square-root-int.cc
    epibook.github.io/solutions/cpp/Square_root.cc
    epibook.github.io/solutions/cpp/Stable_assignment.cc
    epibook.github.io/solutions/cpp/Stack_queue_using_heap.cc
    epibook.github.io/solutions/cpp/Stack_sorting.cc
    epibook.github.io/solutions/cpp/Stack_with_max.cc
    epibook.github.io/solutions/cpp/Stack_with_max.h
    epibook.github.io/solutions/cpp/Stack_with_max_improved.cc
    epibook.github.io/solutions/cpp/String_in_matrix.cc
    epibook.github.io/solutions/cpp/String_matching_wildcard.cc
    epibook.github.io/solutions/cpp/Subseq_cover.cc
    epibook.github.io/solutions/cpp/substring-with-concatenation-of-all-words.cc
    epibook.github.io/solutions/cpp/Successor.cc
    epibook.github.io/solutions/cpp/Sudoku_solve.cc
    epibook.github.io/solutions/cpp/sum-root-to-leaf-binary-tree.cc
    epibook.github.io/solutions/cpp/surrounded-regions.cc
    epibook.github.io/solutions/cpp/swap_bits.cc
    epibook.github.io/solutions/cpp/swap_bits.h
    epibook.github.io/solutions/cpp/Symmetric_binary_tree.cc
    epibook.github.io/solutions/cpp/Tail.cc
    epibook.github.io/solutions/cpp/Tail_coin.cc
    epibook.github.io/solutions/cpp/Task_assignment.cc
    epibook.github.io/solutions/cpp/Team_photo_1.cc
    epibook.github.io/solutions/cpp/Team_photo_2.cc
    epibook.github.io/solutions/cpp/Theory_of_equality.cc
    epibook.github.io/solutions/cpp/Three_jugs.cc
    epibook.github.io/solutions/cpp/Ties_election.cc
    epibook.github.io/solutions/cpp/Tournament_tree.cc
    epibook.github.io/solutions/cpp/tower_hanoi.cc
    epibook.github.io/solutions/cpp/Transform_string_to_other.cc
    epibook.github.io/solutions/cpp/Transitive_closure.cc
    epibook.github.io/solutions/cpp/trapping-rain-water.cc
    epibook.github.io/solutions/cpp/Tree_diameter.cc
    epibook.github.io/solutions/cpp/triangle.cc
    epibook.github.io/solutions/cpp/Uniform_random_number_generation.cc
    epibook.github.io/solutions/cpp/Union_intervals.cc
    epibook.github.io/solutions/cpp/unique-binary-trees-all.cc
    epibook.github.io/solutions/cpp/unique-binary-trees.cc
    epibook.github.io/solutions/cpp/Update_BST.cc
    epibook.github.io/solutions/cpp/valid-IP-address.cc
    epibook.github.io/solutions/cpp/valid-number.cc
    epibook.github.io/solutions/cpp/valid-palindrome.cc
    epibook.github.io/solutions/cpp/valid-parentheses.cc
    epibook.github.io/solutions/cpp/View_from_above.cc
    epibook.github.io/solutions/cpp/View_sunset.cc
    epibook.github.io/solutions/cpp/Wiring_circuit_board.cc
    epibook.github.io/solutions/cpp/word-breaking-2.cc
    epibook.github.io/solutions/cpp/Word_breaking.cc
    epibook.github.io/solutions/cpp/Word_breaking_alternative.cc
    epibook.github.io/solutions/cpp/zigzag-conversion.cc
    epibook.github.io/solutions/cpp/Zipping_list.cc)

add_executable(ElementsProgrammingInterviews ${SOURCE_FILES})